PP-12365 update variable name
