# openapi/publicauth_spec.yaml
@@ -90,7 +90,35 @@ paths:
       summary: Updates the description of an existing dev token.
       tags:
       - Auth
-  /v1/frontend/auth/service/{serviceExternalId}/mode/{mode}:
+  /v1/frontend/auth/service/{serviceExternalId}/mode/{mode}/revoke-all:
+    delete:
+      operationId: revokeTokensForServiceAndMode
+      parameters:
+      - example: 7d19aff33f8948deb97ed16b2912dcd3
+        in: path
+        name: serviceExternalId
+        required: true
+        schema:
+          type: string
+      - in: path
+        name: mode
+        required: true
+        schema:
+          type: string
+          enum:
+          - LIVE
+          - TEST
+      responses:
+        default:
+          content:
+            '*/*': {}
+          description: default response
+      summary: "Revokes all tokens associated with a service and mode. It is not possible\
+        \ to tell whether the service actually exists (in connector), so this method\
+        \ currently does not return a 404."
+      tags:
+      - Auth
+  /v1/frontend/auth/service/{serviceExternalId}/mode/{serviceMode}:
     delete:
       operationId: revokeSingleToken_1
       parameters:
@@ -101,7 +129,7 @@ paths:
         schema:
           type: string
       - in: path
-        name: mode
+        name: serviceMode
         required: true
         schema:
           type: string
@@ -139,7 +167,7 @@ paths:
         schema:
           type: string
       - in: path
-        name: mode
+        name: serviceMode
         required: true
         schema:
           type: string
@@ -179,35 +207,7 @@ paths:
       summary: Retrieves generated tokens for service and mode.
       tags:
       - Auth
-  /v1/frontend/auth/service/{serviceExternalId}/mode/{mode}/revoke-all:
-    delete:
-      operationId: revokeTokensForServiceAndMode
-      parameters:
-      - example: 7d19aff33f8948deb97ed16b2912dcd3
-        in: path
-        name: serviceExternalId
-        required: true
-        schema:
-          type: string
-      - in: path
-        name: mode
-        required: true
-        schema:
-          type: string
-          enum:
-          - LIVE
-          - TEST
-      responses:
-        default:
-          content:
-            '*/*': {}
-          description: default response
-      summary: "Revokes all tokens associated with a service and mode. It is not possible\
-        \ to tell whether the service actually exists (in connector), so this method\
-        \ currently does not return a 404."
-      tags:
-      - Auth
-  '/v1/frontend/auth/service/{serviceExternalId}/mode/{mode}/{tokenLink} ':
+  '/v1/frontend/auth/service/{serviceExternalId}/mode/{serviceMode}/{tokenLink} ':
     get:
       operationId: getTokenByServiceAndTokenLink
       parameters:
@@ -218,7 +218,7 @@ paths:
         schema:
           type: string
       - in: path
-        name: mode
+        name: serviceMode
         required: true
         schema:
           type: string
